Create two different endpoints for Fulcrum and Torque as per loanscan requirements
